<resources>
    <string name="app_name">Mobile Computing Homework</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="profile_picture">profile picture</string>
    <string name="nickname">Nickname</string>
    <string name="favourite_number">Favourite Number</string>
    <string name="new_password">New password</string>
    <string name="update">Update</string>
    <string name="plusSign">plussign</string>
    <string name="firebase_db_url">https://mobilecomputing-hw-default-rtdb.firebaseio.com/</string>
    <string name="reminder_name">Reminder Name</string>
    <string name="reminder_date">reminder Date</string>
    <string name="reminder_time">Reminder time</string>
    <string name="time">Time</string>
    <string name="default_reminder_time">00:00</string>
    <string name="date">Date</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="default_message">Message</string>
    <string name="time_created">Time created</string>
    <string name="show_all">Show all</string>
    <string name="make_a_notification">Make a Notification</string>
    <string name="title_activity_geofence_selection">Map</string>
    <string name="location">location</string>
    <string name="title_activity_select_current_location">Map</string>
    <string name="set_location">Set location</string>
    <string name="real_location">debug location</string>
    <string name="delete_location">delete \n location</string>
    <string name="use_time_for_notification">Use time for notification</string>
    <string name="reminder_message">Reminder message</string>
    <string name="reminder_creation_time">Reminder creation time</string>
</resources>