<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReminderList">

    <ListView
        android:id="@+id/reminderList"
        android:layout_width="411dp"
        android:layout_height="526dp"
        android:layout_marginTop="112dp"
        android:background="#FFFFFF"
        android:divider="#f00"
        android:dividerHeight="1dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/reminder_item" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toTopOf="@+id/reminderList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/profile_picture"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintBottom_toTopOf="@+id/reminderList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003"
        app:srcCompat="@mipmap/default_avatar" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/reminderList"
        app:layout_constraintEnd_toStartOf="@+id/btnLogout"
        app:layout_constraintStart_toEndOf="@+id/btnProfile"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/username" />

    <ImageButton
        android:id="@+id/btnNewReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/plusSign"
        android:scaleX="0.7"
        android:scaleY="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderList"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/plus" />

    <Switch
        android:id="@+id/switchShowAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_all"
        app:layout_constraintBottom_toBottomOf="@+id/btnNewReminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnNewReminder"
        app:layout_constraintTop_toTopOf="@+id/btnNewReminder" />

    <Button
        android:id="@+id/btnDebugLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_location"
        app:layout_constraintBottom_toBottomOf="@+id/btnNewReminder"
        app:layout_constraintEnd_toStartOf="@+id/btnNewReminder"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderList"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/switchDebugLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/real_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnDebugLocation"
        app:layout_constraintStart_toStartOf="@+id/btnDebugLocation"
        app:layout_constraintTop_toBottomOf="@+id/btnDebugLocation" />
</androidx.constraintlayout.widget.ConstraintLayout>